# statsnz-data-quality-poc

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/snapshots/: cpi_sample_api.csv
src/clients/: ckan_api.py  statsnz_api.py  statsnz_pages.py
src/utils/: data_loader.py  reconciliation.py  test_logger.py
src/validators/: cpi_expectations.py  cpi_schema.py
tests/: conftest.py  test_imports.py
tests/api/: conftest.py  test_ckan_smoke.py  test_cpi_smoke.py
tests/data/: test_cpi_expectations.py  test_cpi_quality.py  test_cpi_schema.py  test_reconciliation.py
tests/ui/: conftest.py  test_statsnz_search.py  test_ui_reconciliation.py
