[project]
name = "statsnz-dq"
version = "0.1.0"
description = "Data-quality test framework for Stats NZ open datasets — pytest + playwright + pandas + Pandera + Great Expectations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "great-expectations>=1.17.1",
    "pandas>=3.0.2",
    "pandera>=0.31.1",
    "playwright>=1.59.0",
    "pytest>=9.0.3",
    "pytest-playwright>=0.7.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "allure-pytest>=2.16.0",
    "pytest-html>=4.2.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    # tee-sys captures stdout/stderr AND mirrors them to the terminal —
    # the human-readable test logger needs live output during the run,
    # not only on failure.
    "--capture=tee-sys",
]
markers = [
    "smoke: quick sanity checks against APIs/services",
    "schema: schema-contract validation (Pandera)",
    "quality: data quality dimension assertions (completeness, validity, uniqueness, timeliness)",
    "expectations: Great Expectations suite runs",
    "reconciliation: cross-source data reconciliation",
    "ui: Playwright UI tests",
    "live: hits live external services (skip in offline CI runs)",
    "slow: takes more than a few seconds",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
